[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["DylanStrudwick <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
beautifulsoup4 = "^4.10.0"
Flask = "^2.1.0"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
